<resources>
    <string name="app_name">Wound Montoring Application V1</string>
    <string name="reminder_prompt">One</string>
    <string-array name="reminder_options">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home_welcome">Welcome, let\'s start checking those wounds.</string>

    <!--List of options for th Your Data fragment-->
    <string-array name="your_data_options">
        <item>Personal Details</item>
        <item>History</item>
        <item>Reminders</item>
        <item>Settings</item>
    </string-array>

    <!--Strings for registering -->
    <string name="fname"><i>First Name</i></string>
    <string name="lname"><i>Last Name</i></string>
    <string name="dob"><i>dd/mm/yyyy</i></string>
    <string name="add1"><i>Address Line 1</i></string>
    <string name="add2"><i>Address Line 2</i></string>
    <string name="town"><i>Town/City</i></string>
    <string name="country"><i>Country</i></string>
    <string name="postcode"><i>Postcode</i></string>
    <string name="email"><i>Email</i></string>
    <string name="pw"><i>Password</i></string>
    <string name="pw2"><i>Re-enter Password</i></string>
    <string name="clinician"><i>Your GPs email</i></string>

    <string-array name="wound_locations">
        <item>Left Arm</item>
        <item>Left Leg</item>
        <item>Left Foot</item>
        <item>Left Hand</item>
        <item>Right Arm</item>
        <item>Right Leg</item>
        <item>Right Foot</item>
        <item>Right Hand</item>
        <item>Stomach</item>
        <item>Chest</item>
        <item>Neck</item>
        <item>Back</item>
        <item>Groin</item>
        <item>Head</item>
    </string-array>

    <string name="title_activity_register_dressing">RegisterDressingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
